--- a/app/views/articles/create.html.erb
+++ b/app/views/articles/create.html.erb
@@ -1,1 +1,16 @@
-<%= render 'form' %>
+
+<div class="container">
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2">
+        <div class="article-body">
+          <% if current_user %>
+            Signed in as <%= current_user.name %> | <%= render 'form' %>
+          <% else %>
+            <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+</div>
+
+
