--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -2,7 +2,11 @@
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2">
         <div class="article-body">
-          <%= render 'form' %>
+          <% if current_user %>
+            Signed in as <%= current_user.name %> | <%= render 'form' %>
+          <% else %>
+            <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+          <% end %>
         </div>
       </div>
     </div>
