changed the homepage to index page

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -4,7 +4,7 @@
       <div class="col-sm-8 col-sm-offset-2">
         <div class="article-body">
           <% if current_user %>
-            Signed in as <%= current_user.name %> | <%= render 'form' %>
+            <%= render 'form' %>
           <% else %>
             <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
           <% end %>
